Desktop/www/ingress-yaml-backup/dud.yaml
apiVersion: v1
kind: Service
metadata:
  name: dud
spec:
  selector:
    app: dud
  ports:
    - port: 80
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dud
spec:
  selector:
    matchLabels:
      app: dud
  replicas: 2
  template:
    metadata:
      labels:
        app: dud
    spec:
      containers:
      - name: dud
        image: "gcr.io/com3014-a7833/dud"
        imagePullPolicy: Always
