Desktop/www/ingress-yaml-backup/snapfile-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapfile-fe
spec:
  selector:
    app: snapfile-fe
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapfile-fe
spec:
  selector:
    matchLabels:
      app: snapfile-fe
  replicas: 2
  template:
    metadata:
      labels:
        app: snapfile-fe
    spec:
      containers:
      - name: snapfile-fe
        image: "gcr.io/com3014-a7833/snapfile:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
