Desktop/www/ingress-yaml-backup/url.yaml
apiVersion: v1
kind: Service
metadata:
  name: url
spec:
  selector:
    app: url
  ports:
    - port: 80
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url
spec:
  selector:
    matchLabels:
      app: url
  replicas: 2
  template:
    metadata:
      labels:
        app: url
    spec:
      containers:
      - name: url
        image: "gcr.io/com3014-a7833/url"
        imagePullPolicy: Always
