Desktop/www/ingress-yaml-backup/user.yaml

apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  replicas: 2
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: "gcr.io/com3014-a7833/user"
        imagePullPolicy: Always
